--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -18,6 +18,12 @@
     width: 1200px;
     margin: 0 auto;
 }
+.background{
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    width: 100%;
+}
 /*Header*/
 .container > header{
     margin-top: 20px;
@@ -354,4 +360,130 @@ nav{
 .title.build_active_title,
 .building_items.build_active_item{
     display: flex;
+}
+.building_items.final form{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    padding: 27px;
+    grid-gap: 17px;
+    font-family: Circe, sans-serif;
+    font-size: 25px;
+    text-transform: uppercase;
+}
+.input{
+    border: none;
+    font-family: Circe, sans-serif;
+    font-size: 20px;
+    text-transform: uppercase;
+    border-bottom: 1px solid #D7D8FF;
+    transition: border-bottom .3s linear;
+}
+.input:hover,
+.input:focus{
+    border-bottom: 1px solid black;
+}
+.input::placeholder{
+    color: #D7D8FF;
+}
+.name {
+    grid-area: 1 / 1 / 2 / 2;
+    display: flex;
+    flex-direction: column;
+    gap: 13px;
+}
+.phone {
+    grid-area: 1 / 2 / 2 / 3;
+    display: flex;
+    flex-direction: column;
+    gap: 13px;
+    position: relative;
+}
+.phone input{
+    padding-left: 24px;
+}
+.phone:before{
+    content: "+7";
+    width: max-content;
+    height: max-content;
+    position: absolute;
+    color: black;
+    z-index: 1;
+    left: 0;
+    bottom: 19px;
+    font-size: 21px;
+}
+.email {
+    grid-area: 1 / 3 / 2 / 4;
+    display: flex;
+    flex-direction: column;
+    gap: 13px;
+}
+.text {
+    grid-area: 2 / 1 / 3 / 4;
+    display: flex;
+    flex-direction: column;
+    gap: 13px;
+    height: max-content;
+}
+.file {
+    grid-area: 3 / 1 / 4 / 4;
+    display: grid;
+    grid-template-areas: "icon title" "icon desc";
+    width: max-content;
+    cursor: pointer;
+    height: max-content;
+    margin-top: 30px;
+}
+.file img {
+    grid-area: icon;
+}
+.file_title {
+    color: var(--accent-color);
+    grid-area: title;
+    height: max-content;
+}
+.file_desc{
+    font-size: 20px;
+    color: #D7D8FF;
+    height: max-content;
+}
+.building_items form button{
+    background: var(--accent-color);
+    padding: 19px 52px;
+    color: #fff;
+    font-family: Stem, sans-serif;
+    font-size: 26px;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+.title_final{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+}
+.title_final:before{
+    content: "";
+    position: absolute;
+    z-index: -1;
+    width: 1200px;
+    height: 15px;
+    background: var(--accent-color);
+}
+.title_final span{
+    color: var(--accent-color);
+    font-family: Stem, sans-serif;
+    font-size: 30px;
+    text-transform: uppercase;
+    width: min-content;
+    background: #fff;
+    padding: 0 25px;
+}
+.title_final span:first-child{
+    padding-left: 0;
+}
+.title_final span:last-child{
+    padding-right: 0;
 }
