--- a/assets/styles/@media-768.css
+++ b/assets/styles/@media-768.css
@@ -1,6 +1,148 @@
 @media screen and (max-width: 768px) {
-    .container{
+    .container {
         max-width: 640px;
-        background: green;
+    }
+    .logo svg{
+        width: 64px;
+        height: 35px;
+    }
+    .link a{
+        font-size: 10px;
+    }
+    .main_title{
+        font-size: 40px;
+    }
+    .main_title:after{
+        width: 76px;
+        height: 7px;
+        top: 30px;
+    }
+    .main_description{
+        font-size: 15px;
+        line-height: 21px;
+    }
+    .title{
+        font-size: 32px;
+    }
+    .services_items{
+        flex-wrap: wrap;
+    }
+    .service_item{
+        width: 207px;
+        height: 209px;
+    }
+
+    .service_icon{
+        width: 70px;
+        height: 70px;
+    }
+    .service_name{
+        font-size: 20px;
+    }
+    .service_block .btn{
+        font-size: 22px;
+    }
+    .industry_cards{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .industry_card_name{
+        font-size: 15px;
+    }
+    .industry_card_icon{
+        height: 40px;
+    }
+    .industry_info_title{
+        font-size: 22px;
+    }
+    .industry_info_list li{
+        font-size: 15px;
+        margin-left: 15px;
+        line-height: 20px;
+    }
+    .industry_info_list li:after{
+        width: 5px;
+        height: 5px;
+        left: -15px;
+    }
+    .stage_btn div{
+        font-size: 32px;
+        width: 45px;
+        height: 45px;
+    }
+    .stage_info{
+        font-size: 15px;
+        width: 492px;
+        line-height: 22px;
+        margin-left: 85px;
+        padding-left: 10px;
+    }
+    .stage_info.visible{
+        padding: 8px 15px 8px;
+        margin: 28px 0 20px 85px;
+        max-height: max-content;
+        overflow: visible;
+    }
+    .stage_btn{
+        font-size: 22px;
+    }
+    .building_items{
+        flex-wrap: wrap;
+        justify-content: start;
+    }
+    .building_item{
+        width: 201px;
+        height: 203px;
+    }
+    .technology_items{
+        gap: 15px;
+    }
+    .technology_text{
+        font-size: 13px;
+        padding: 7px 15px;
+    }
+    .hint{
+        font-size: 15px;
+    }
+    .progress{
+        width: 120px;
+        height: 10px;
+    }
+    .building_item svg{
+        width: 62px;
+        height: 62px;
+    }
+    .building_item span{
+        font-size: 20px;
+    }
+
+    .preloader svg{
+        width: 300px;
+        height: 300px;
+    }
+    .title_final:before{
+        width: 100%;
+    }
+    .title_final span{
+        font-size: 24px;
+    }
+    .building_items.final form{
+        width: 100%;
+        font-size: 18px;
+    }
+    .title_final span{
+        padding: 0;
+        font-size: 20px;
+    }
+    .title_final{
+        gap: 10px;
+    }
+    .name,.phone{
+        grid-area: auto;
+    }
+    .building_items form button{
+        font-size: 14px;
+    }
+    .input{
+        font-size: 16px;
     }
 }
