--- a/assets/styles/@media-480.css
+++ b/assets/styles/@media-480.css
@@ -1,6 +1,103 @@
 @media screen and (max-width: 480px) {
     .container{
         max-width: 460px;
-        background: yellow;
+    }
+    .link.deactivate{
+        display: none;
+    }
+    .btn a{
+        font-size: 10px;
+        padding: 1px 10px;
+    }
+    .logo svg{
+        width: 58px;
+        height: 30px;
+    }
+    .main_title{
+        font-size: 40px;
+    }
+    .main_title:after{
+        display: none;
+    }
+    .main_description{
+        font-size: 12px;
+    }
+    .title{
+        font-size: 32px;
+        padding-top: 0;
+    }
+    .service_block{
+        height: 100vh;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+    }
+    .services_items{
+        margin: 0;
+        justify-content: center;
+    }
+    .service_block .btn{
+        margin: 0 auto;
+    }
+    .industry_items.deactivate{
+        display: none;
+    }
+    .industry_items_mobile{
+        margin-top: 25px;
+    }
+    .industry_info.deactivate,
+    .industry_card_info,
+    .industry_info_list{
+        display: none;
+    }
+    #ind_1:checked ~ body{
+        background: red;
+    }
+    .industry_card_info{
+        position: absolute;
+        background: var(--item-background);
+        box-shadow: -6px 6px 5.5px rgba(171, 171, 175, 0.82);
+        width: 78%;
+        height: max-content;
+        padding: 15px 13px;
+        flex-direction: column;
+    }
+    .stage_btn{
+        gap: 10px;
+    }
+    .stage_btn div{
+        font-size: 25px;
+        width: 32px;
+        height: 32px;
+    }
+    .stage_btn span{
+        font-size: 20px;
+    }
+    .stage_info{
+        font-size: 15px;
+        margin-left: 38px;
+        padding-left: 15px;
+        width: 400px;
+        height: max-content;
+    }
+    .stage_info.visible{
+        padding: 8px 30px 15px;
+        margin: 27px 0 27px 38px;
+    }
+    .building_items{
+        justify-content: center;
+    }
+    .title_final{
+        flex-direction: column;
+    }
+    .title_final span{
+        width: max-content;
+    }
+    .progress_bar{
+        justify-content: center;
+    }
+    .phone:before{
+        bottom: 1px;
+        font-size: 16px;
     }
 }
