--- a/assets/styles/@media-320.css
+++ b/assets/styles/@media-320.css
@@ -1,6 +1,77 @@
 @media screen and (max-width: 320px) {
     .container{
         max-width: 300px;
-        background: pink;
+    }
+    .preloader svg{
+        width: 150px;
+        height: 150px;
+    }
+    .service_item,
+    .industry_card,
+    .building_item{
+        width: 122px;
+        height: 123px;
+    }
+    .service_icon,
+    .industry_card_icon,
+    .building_item svg{
+        width: 40px;
+        height: 40px;
+    }
+    .service_name,
+    .industry_card_name,
+    .building_item > .building_name{
+        font-size: 12px;
+        line-height: 18px;
+    }
+    .service_block .btn{
+        font-size: 15px;
+        margin: 60px auto 0;
+    }
+    .industry_card_info{
+        width: 86%;
+    }
+    .industry_block{
+        height: 100svh;
+    }
+    .industry_info_title{
+        font-size: 15px;
+    }
+    .industry_info_list li{
+        font-size: 12px;
+    }
+    .stage_btn{
+        gap: 5px;
+    }
+    .stage_btn:not(:last-child){
+        margin: 0 0 3px;
+    }
+    .stage_btn div {
+        font-size: 20px;
+        width: 25px;
+        height: 25px;
+    }
+    .stage_btn span{
+        font-size: 15px;
+    }
+    .stage_info{
+        margin: 0;
+        font-size: 10px;
+        line-height: 15px;
+    }
+    .stage_info.visible{
+        margin: 20px 0;
+        padding: 15px 13px;
+        width: 100%;
+    }
+    .technology_items{
+        justify-content: start;
+        margin: 70px 0;
+    }
+    .progress_bar{
+        justify-content: start;
+    }
+    .title_final:before{
+        display: none;
     }
 }
