--- a/assets/styles/@media-480.css
+++ b/assets/styles/@media-480.css
@@ -1,6 +1,6 @@
 @media screen and (max-width: 480px) {
     .container{
-        max-width: 460px;
+        max-width: 98%;
     }
     .link.deactivate{
         display: none;
@@ -27,7 +27,7 @@
         padding-top: 0;
     }
     .service_block{
-        height: 100vh;
+        height: max-content;
         display: flex;
         justify-content: space-between;
         flex-direction: column;
@@ -64,6 +64,7 @@
     }
     .stage_btn{
         gap: 10px;
+        margin: 30px 0 0;
     }
     .stage_btn div{
         font-size: 25px;
@@ -72,17 +73,17 @@
     }
     .stage_btn span{
         font-size: 20px;
+        width: 100%;
     }
     .stage_info{
+        margin: 0;
         font-size: 15px;
-        margin-left: 38px;
-        padding-left: 15px;
-        width: 400px;
-        height: max-content;
+        line-height: 15px;
     }
     .stage_info.visible{
-        padding: 8px 30px 15px;
-        margin: 27px 0 27px 38px;
+        margin: 20px 0;
+        padding: 15px 13px;
+        width: 100%;
     }
     .building_items{
         justify-content: center;
