animated first background images

--- a/assets/styles/@media-320.css
+++ b/assets/styles/@media-320.css
@@ -74,4 +74,75 @@
     .title_final:before{
         display: none;
     }
+
+    @keyframes bg1 {
+        0%{
+            left: 98%;
+            top: -10.8%;
+        }
+        5%{
+            left: 43%;
+            top: -10.8%;
+        }
+        10%{
+            left: 33.7%;
+            top: -3.5%;
+        }
+        15%{
+            left: 13%;
+            top: -3.5%;
+        }
+        20%{
+            left: 23%;
+            top: -10.8%;
+        }
+        25%{
+            left: 13%;
+            top: -18.5%;
+        }
+        30%{
+            left: -18%;
+            top: 4%;
+        }
+        35%{
+            left: -8.1%;
+            top: 11.3%;
+        }
+        40%{
+            left: -28.6%;
+            top: 11.3%;
+        }
+        45%{
+            left: -38%;
+            top: 4%;
+        }
+        50%{
+            left: -18.1%;
+            top: -10.8%;
+        }
+        55%{
+            left: -28.5%;
+            top: -18%;
+        }
+        60%{
+            left: -38.5%;
+            top: -10.8%;
+        }
+        65%{
+            left: -18%;
+            top: 4%;
+        }
+        70%{
+            left: -100.1%;
+            top: 4%;
+        }
+        99%{
+            left: -103.3%;
+            top: -31.5%;
+        }
+        100%{
+            left: 102.2%;
+            top: -31.5%;
+        }
+    }
 }
