--- a/assets/styles/@media-480.css
+++ b/assets/styles/@media-480.css
@@ -104,4 +104,75 @@
     .title_final:before{
         display: none;
     }
+
+    @keyframes bg1 {
+        0%{
+            left: 98%;
+            top: -17.4%;
+        }
+        5%{
+            left: 43%;
+            top: -17.4%;
+        }
+        10%{
+            left: 33.7%;
+            top: -6.4%;
+        }
+        15%{
+            left: 13.2%;
+            top: -6.4%;
+        }
+        20%{
+            left: 23.2%;
+            top: -17.4%;
+        }
+        25%{
+            left: 13.2%;
+            top: -28.4%;
+        }
+        30%{
+            left: -18.1%;
+            top: 4.7%;
+        }
+        35%{
+            left: -8.1%;
+            top: 15.9%;
+        }
+        40%{
+            left: -28.8%;
+            top: 15.9%;
+        }
+        45%{
+            left: -38%;
+            top: 4.7%;
+        }
+        50%{
+            left: -18.1%;
+            top: -17.4%;
+        }
+        55%{
+            left: -28.4%;
+            top: -28.1%;
+        }
+        60%{
+            left: -38.5%;
+            top: -17.4%;
+        }
+        65%{
+            left: -18.1%;
+            top: 4.7%;
+        }
+        70%{
+            left: -100.1%;
+            top: 4.7%;
+        }
+        99%{
+            left: -103.3%;
+            top: -41.5%;
+        }
+        100%{
+            left: 102.2%;
+            top: -41.5%;
+        }
+    }
 }
