--- a/assets/styles/@media-768.css
+++ b/assets/styles/@media-768.css
@@ -145,4 +145,77 @@
     .input{
         font-size: 16px;
     }
+
+    @keyframes bg1 {
+        0%{
+            left: 104%;
+            top: -29.4%;
+        }
+        5%{
+            left: 43%;
+            top: -29.4%;
+        }
+        10%{
+            left: 33.6%;
+            top: -11.9%;
+        }
+        15%{
+            left: 13.2%;
+            top: -11.9%;
+
+
+        }
+        20%{
+            left: 23.2%;
+            top: -29.4%;
+        }
+        25%{
+            left: 13.2%;
+            top: -46.8%;
+        }
+        30%{
+            left: -18.2%;
+            top: 5.9%;
+        }
+        35%{
+            left: -8.2%;
+            top: 23.9%;
+        }
+        40%{
+            left: -28.5%;
+            top: 23.9%;
+        }
+        45%{
+            left: -37.9%;
+            top: 6%;
+        }
+        50%{
+            left: -17.9%;
+            top: -29.5%;
+        }
+        55%{
+            left: -28.4%;
+            top: -46.9%;
+        }
+        60%{
+            left: -38.3%;
+            top: -29.5%;
+        }
+        65%{
+            left: -18.1%;
+            top: 6%;
+        }
+        70%{
+            left: -103.3%;
+            top: 6%;
+        }
+        99%{
+            left: -103.3%;
+            top: -91.5%;
+        }
+        100%{
+            left: 102.2%;
+            top: -91.5%;
+        }
+    }
 }
