--- a/assets/styles/@media-1000.css
+++ b/assets/styles/@media-1000.css
@@ -82,4 +82,76 @@
     .building_items form button{
         font-size: 19px;
     }
+
+    @keyframes bg1 {
+        0%{
+            left: 102.2%;
+            top: -39.4%;
+        }
+        5%{
+            left: 43.2%;
+            top: -39.4%;
+        }
+        10%{
+            left: 33.8%;
+            top: -16.2%;
+        }
+        15%{
+            left: 13.2%;
+            top: -16.2%;
+        }
+        20%{
+            left: 23.2%;
+            top: -39.2%;
+        }
+        25%{
+            left: 13.2%;
+            top: -62.2%;
+        }
+        30%{
+            left: -18%;
+            top: 7.1%;
+        }
+        35%{
+            left: -7.9%;
+            top: 30.3%;
+        }
+        40%{
+            left: -28.6%;
+            top: 30.3%;
+        }
+        45%{
+            left: -37.9%;
+            top: 7%;
+        }
+        50%{
+            left: -17.9%;
+            top: -39%;
+        }
+        55%{
+            left: -28.3%;
+            top: -62%;
+        }
+        60%{
+            left: -38.3%;
+            top: -39%;
+        }
+        65%{
+            left: -18.3%;
+            top: 7%;
+        }
+        70%{
+            left: -103.3%;
+            top: 7%;
+        }
+        99%{
+            left: -104.8%;
+            top: -191.5%;
+        }
+        100%{
+            left: 102.2%;
+            top: -191.5%;
+        }
+    }
+
 }
