--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -352,7 +352,7 @@ nav{
     text-transform: uppercase;
     cursor: pointer;
 }
-.stage_num{
+.stage_btn div{
     width: 66px;
     height: 66px;
     background: var(--accent-color);
@@ -629,6 +629,43 @@ p.technology_text{
 }
 .title_final.active span:last-child{
     padding-right: 0;
+}
+
+.contacts{
+    width: 100%;
+    height: 100svh;
+    position: relative;
+}
+.contacts_blocks{
+    margin-top: 125px;
+    display: flex;
+    flex-direction: column;
+    gap: 62px;
+    width: max-content;
+    font-family: Circe, sans-serif;
+    font-size: 1.88rem;
+    line-height: 2.75rem;
+    text-transform: uppercase;
+}
+.contact_block{
+    padding: 30px;
+    background: var(--item-background);
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.contact_block div{
+    color: var(--accent-color);
+}
+.contact_block span a{
+    color: var(--text-color);
+}
+.contact_img{
+    width: 8.91rem;
+    height: 5.44rem;
+    position: absolute;
+    bottom: 0;
+    right: 0;
 }
 
 @media screen and (max-width: 1000px) {
@@ -976,6 +1013,17 @@ p.technology_text{
         width: calc(12.58rem * 2 + 32px * 2);
         margin: 0 auto;
     }
+
+
+    .contacts_blocks{
+        margin-top: 50px;
+        font-size: 1.28rem;
+        gap: 35px;
+    }
+    .contact_block {
+        gap: 7px;
+    }
+
 }
 
 @media screen and (max-width: 486px) {
@@ -1227,5 +1275,14 @@ p.technology_text{
         margin: 0 auto;
         justify-content: start;
         gap: 19px 23px;
+    }
+
+    .contacts_blocks{
+        margin-top: 30px;
+        font-size: 0.98rem;
+        gap: 25px;
+    }
+    .contact_block {
+        gap: 4px;
     }
 }
